Trichy page navbar updated

--- a/Trichy.html
+++ b/Trichy.html
@@ -39,118 +39,117 @@
 
 <body>
 
+<!-- Navbar -->
+  <section class="nevigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark container" id="main_navbar">
+        <a class="navbar-brand logo-property" href="#"><img src="./img/McaIndia.jpeg" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- start DropDown for College  -->
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown nav-font">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Colleges
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                </li>
+                <!-- State 1 DropDown -->
+                <li class="nav-item dropdown">
+                    <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Tamilnadu
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <li><a class="dropdown-item" href="#">Nit Trichy</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item" href="#">Ceg</a></li>
+                        <div class="dropdown-divider"></div>
+                </li>
+            </ul>
+            </li>
+            <!-- State-2 DropDown -->
+            <li class="nav-item dropdown">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Kerla
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                    <li><a class="dropdown-item" href="#">Cusat</a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="#">Ceg</a></li>
+                    <div class="dropdown-divider"></div>
+            </li>
+            </ul>
+            </li>
+            </ul>
+            </li>
+            <!-- End of College Dropdown -->
 
-  <!-- <section class="nevigation"> -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main_navbar">
-    <a class="navbar-brand logo-property" href="./index.html"><img src="./img/McaIndia.jpeg" alt=""></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- start DropDown for College  -->
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown nav-font">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Colleges
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        </li>
-        <!-- State 1 DropDown -->
-        <li class="nav-item dropdown">
-          <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Tamilnadu
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-            <li><a class="dropdown-item" href="#">Nit Trichy</a></li>
-            <div class="dropdown-divider"></div>
-            <li><a class="dropdown-item" href="#">Ceg</a></li>
-            <div class="dropdown-divider"></div>
-        </li>
-      </ul>
-      </li>
-      <!-- State-2 DropDown -->
-      <li class="nav-item dropdown">
-        <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Kerla
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-          <li><a class="dropdown-item" href="#">Cusat</a></li>
-          <div class="dropdown-divider"></div>
-          <li><a class="dropdown-item" href="#">Ceg</a></li>
-          <div class="dropdown-divider"></div>
-      </li>
-      </ul>
-      </li>
-      </ul>
-      </li>
-      <!-- End of College Dropdown -->
+            <!-- start DropDown for Exams  -->
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown nav-font">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Exams
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    </li>
+                    <!-- Nit's 1 DropDown -->
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Nit's
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                            <li><a class="dropdown-item" href="#">Nit Trichy</a></li>
+                            <div class="dropdown-divider"></div>
+                            <li><a class="dropdown-item" href="#">Nit Kurushetra</a></li>
+                            <div class="dropdown-divider"></div>
+                    </li>
+                </ul>
+                </li>
+                <!-- Central-2 DropDown -->
+                <li class="nav-item dropdown">
+                    <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Central-Government
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <li><a class="dropdown-item" href="#">Hcu</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item" href="#">Jnu</a></li>
+                        <div class="dropdown-divider"></div>
+                </li>
+                </ul>
+                <li class="nav-item dropdown">
+                    <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        State-Government
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <li><a class="dropdown-item" href="#">Cusat</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item" href="#">Ceg</a></li>
+                        <div class="dropdown-divider"></div>
+                </li>
+                </ul>
+                </li>
+                </ul>
+                </li>
 
-      <!-- start DropDown for Exams  -->
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown nav-font">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Exams
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          </li>
-          <!-- Nit's 1 DropDown -->
-          <li class="nav-item dropdown">
-            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Nit's
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <li><a class="dropdown-item" href="#">Nit Trichy</a></li>
-              <div class="dropdown-divider"></div>
-              <li><a class="dropdown-item" href="#">Nit Kurushetra</a></li>
-              <div class="dropdown-divider"></div>
-          </li>
-        </ul>
-        </li>
-        <!-- Central-2 DropDown -->
-        <li class="nav-item dropdown">
-          <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Central-Government
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-            <li><a class="dropdown-item" href="#">Hcu</a></li>
-            <div class="dropdown-divider"></div>
-            <li><a class="dropdown-item" href="#">Jnu</a></li>
-            <div class="dropdown-divider"></div>
-        </li>
-        </ul>
-        <li class="nav-item dropdown">
-          <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            State-Government
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-            <li><a class="dropdown-item" href="#">Cusat</a></li>
-            <div class="dropdown-divider"></div>
-            <li><a class="dropdown-item" href="#">Ceg</a></li>
-            <div class="dropdown-divider"></div>
-        </li>
-        </ul>
-        </li>
-        </ul>
-        </li>
-
-        <li class="nav-item nav-font"> <a class="nav-link" href="./blog.html">Blog</a> </li>
-        <li class="nav-item nav-font"> <a class="nav-link" href="#">SignUp</a> </li>
-        <li class="nav-item nav-font"><a class="nav-link" href="#"> LogIn</a> </li>
-        <!-- <div id="main"> -->
-        <button class="openbtn" id="clkbtn" onclick="openNav()"> Notification</button>
-        <!-- </div> -->
-        </ul>
-      </div>
-  </nav>
+                <li class="nav-item nav-font"> <a class="nav-link" href="#">Blog</a> </li>
+                <li class="nav-item nav-font"> <a class="nav-link" href="#">Sign Up</a> </li>
+                <li class="nav-item nav-font"><a class="nav-link" href="javascript:void(0)" onclick="openPopUp()"> Sign In</a> </li>
+                <button class="openbtn" id="clkbtn" onclick="openNav()"> Notification</button>
+                </ul>
+            </div>
+    </nav>
+</section>
 <!-- Carousel start -->
 <div id="carouselExampleControls" class="carousel slide mt-3 container" data-ride="carousel">
   <div class="carousel-inner">
@@ -177,7 +176,7 @@
 </div>
 
   <!-- <div class="container"> -->
-  <div class="row mt-3">
+  <div class="row mt-3 m-4">
     <div class="col-md-8 blog-main mb-3">
       <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
